--- a/README.Rmd
+++ b/README.Rmd
@@ -17,3 +17,5 @@ The LSA formulas which this package use are the proposal by:
   + LSA = 0.735 *B *V
 - **Smith & Starrett 1979**
   + LSA = 2 [(FA*V)+ $$\frac{1}{2}$$]
+
+$\alpha$
