--- a/README.Rmd
+++ b/README.Rmd
@@ -16,6 +16,6 @@ The LSA formulas which this package use are the proposal by:
 - **Pirlot 1977**
   + LSA = 0.735 *B *V
 - **Smith & Starrett 1979**
-  + LSA = 2 [(FA*V)+ $$\frac{1}{2}$$]
+  + LSA = 2 ((FA*V)+ $$\frac{1}{2}$$)
 
-$\alpha$
+$$\alpha$$
