--- a/README.Rmd
+++ b/README.Rmd
@@ -1,7 +1,7 @@
-# BatWing
+# *BatWing*
 
 ```
-**Package write in the R programming language**
+Package write in the R programming language
 ```
 ```
 Version 1.0.0. Beta (2016-06-10)
