--- a/README.Rmd
+++ b/README.Rmd
@@ -37,10 +37,9 @@ The LSA formulas which this package use are the proposal by:
 
  
 <sup>*Where:*
-<sup>
-  - *FA = Forearm Length*
+
+  - <sup>*FA = Forearm Length*
   - *B = Wingspan*
   - *III = Digit 3 Length*
   - *IV = Digit 4 Length*
   - *V = Digit 5 Length*
-<\sup>
