--- a/README.Rmd
+++ b/README.Rmd
@@ -38,9 +38,6 @@ The LSA formulas which this package use are the proposal by:
  
 <sup>*Where:*
 
-  <sup>| *FA = Forearm Length* | *B = Wingspan* |
-       | *III = Digit 3 Length*|*IV = Digit 4 Length*|
-  
-  <sup>*V = Digit 5 Length*
-  
-  <sup>*M = Mass*
+  <sup> *FA = Forearm Length*, *B = Wingspan* 
+  , *III = Digit 3 Length*, *IV = Digit 4 Length*
+  , *V = Digit 5 Length*, *M = Mass*
