--- a/README.Rmd
+++ b/README.Rmd
@@ -38,6 +38,6 @@ The LSA formulas which this package use are the proposal by:
  
 <sup>*Where:*
 
-  <sup> *FA = Forearm Length*, *B = Wingspan* 
+  <sup> _**FA** = Forearm Length_, *B = Wingspan* 
   , *III = Digit 3 Length*, *IV = Digit 4 Length*
   , *V = Digit 5 Length*, *M = Mass*
