--- a/README.Rmd
+++ b/README.Rmd
@@ -50,3 +50,9 @@ ___
 data <- read.csv("wing.csv", header=T)
 head(data)
 ```
+|id|ForearmLength|Digit5.Length|Digit4.Length|Digit3.Length|Mass|Wingspan|
+|:---|:---:|:---:|:---:|:---:|:---:|:---:|
+|ODLAM-011|41.4|63.2|61.7|87.5|15.5|330|
+|ODLAM-010|42.4|64.1|62.6|94.9|17.5|325|
+|ODLAM-012|37.9|54.6|58.2|76.0|9|295|
+|ODLAM-014|41.5|58.3|58.95|79.7|16.5|319|
