--- a/README.Rmd
+++ b/README.Rmd
@@ -56,3 +56,16 @@ head(data)
 |ODLAM-010|42.4|64.1|62.6|94.9|17.5|325|
 |ODLAM-012|37.9|54.6|58.2|76.0|9|295|
 |ODLAM-014|41.5|58.3|58.95|79.7|16.5|319|
+
+```{r}
+LSA <- BatWingArea(x=data, scale=F)
+head(LSA$Area)
+```
+
+||BM|A|SS|P|
+|:---|:---:|:---:|:---:|:---:|
+|ODLAM-011|10762.960|0.2282375|11892.700|15329.160|
+|ODLAM-010|11518.770|0.2909375|12604.629|15311.887|
+|ODLAM-012|8288.280|0.0769500|9585.018|11838.645|
+|ODLAM-014|9485.410|0.2586375|10660.039|13669.309|
+|ODLAM-016|3486.100|0.0534375|5107.123|4968.012|
