--- a/README.Rmd
+++ b/README.Rmd
@@ -85,8 +85,20 @@ head(LSA$Area)
 ```
 
 ||BM|SS|
-|:---:|:---:|:---:|
+|:---|:---:|:---:|
 |ODLAM-011|10762.960|11892.700|
 |ODLAM-010|11518.770|12604.629|
 |ODLAM-012|8288.280|9585.018|
 |ODLAM-014|9485.410|10660.039|
+
+```{r}
+data <- read.csv("dynamics.csv",header=T)
+head(data)
+```
+
+|ID|Mass|Env|Area|
+|:---|:---:|:---:|:---:|
+ODLAM-011|15.5|330|0.011892700|
+ODLAM-010|17.5|325|0.012604629|
+ODLAM-012|9.0|295|0.009585018|
+4  ODLAM-014 16.5 319 0.010660039
