--- a/README.Rmd
+++ b/README.Rmd
@@ -102,3 +102,15 @@ head(data)
 |ODLAM-010|17.5|325|0.012604629|
 |ODLAM-012|9.0|295|0.009585018|
 |ODLAM-014| 16.5 |319| 0.010660039
+
+```{r}
+Dym <- BatWingDynamics(x=data, scale=T)
+head(Dym$Dynamics)
+```
+
+||AR   |    WL    |   RWL  |    MPS|
+|:---|:---:|:---:|:---:|:---:|
+|ODLAM-011  |9.156878| 12.78557 | 51.27941 |3.715662|
+|ODLAM-010  |8.379858 |13.62000  |52.46032| 3.905866|
+|ODLAM-012 | 9.079273 | 9.21125 | 44.28307| 3.218072|
+|ODLAM-014|  9.546025 |15.18428 | 59.64392 |3.940761|
