--- a/README.Rmd
+++ b/README.Rmd
@@ -114,3 +114,13 @@ head(Dym$Dynamics)
 |ODLAM-010  |8.379858 |13.62000  |52.46032| 3.905866|
 |ODLAM-012 | 9.079273 | 9.21125 | 44.28307| 3.218072|
 |ODLAM-014|  9.546025 |15.18428 | 59.64392 |3.940761|
+
+```{r}
+head(Dym$Stats)
+```
+
+|| Mass|         Env|         Area|        AR|       WL   |    RWL|       MPS|
+|:---|:---:|:---:|:---:|:---:|:---:|:---:|:---:|:---:|
+|mean |1.775000e-02| 0.337300000| 1.173300e-02| 10.333714 |15.48375|  61.14137| 3.8564452|
+|sd  | 8.813657e-03| 0.077113264| 5.577896e-03|  1.752498 | 5.16755 | 20.17576 |0.3835981|
+|var|  7.768056e-05| 0.005946456| 3.111293e-05|  3.071250| 26.70357 |407.06138 |0.1471475|
