--- a/README.Rmd
+++ b/README.Rmd
@@ -50,24 +50,31 @@ ___
 data <- read.csv("wing.csv", header=T)
 head(data)
 ```
-|id|ForearmLength|Digit5.Length|Digit4.Length|Digit3.Length|Mass|Wingspan|
-|:---|:---:|:---:|:---:|:---:|:---:|:---:|
-|ODLAM-011|41.4|63.2|61.7|87.5|15.5|330|
-|ODLAM-010|42.4|64.1|62.6|94.9|17.5|325|
-|ODLAM-012|37.9|54.6|58.2|76.0|9|295|
-|ODLAM-014|41.5|58.3|58.95|79.7|16.5|319|
+
+```
+         id ForearmLength Digit5.Length Digit4.Length Digit3.Length Mass Wingspan
+1 ODLAM-011          41.4         63.20         61.70         87.50 15.5      330
+2 ODLAM-010          42.4         64.10         62.60         94.90 17.5      325
+3 ODLAM-012          37.9         54.60         58.20         76.00  9.0      295
+4 ODLAM-014          41.5         58.30         58.95         79.70 16.5      319
+5 ODLAM-016          31.0         28.40         49.90         60.75  7.5      238
+6 ODLAM-018          42.1         59.15         61.90         79.90 15.5      331
+```
 
 ```{r}
 LSA <- BatWingArea(x=data, scale=F)
 head(LSA$Area)
 ```
 
-||BM|A|SS|P|
-|:---|:---:|:---:|:---:|:---:|
-|ODLAM-011|10762.960|0.2282375|11892.700|15329.160|
-|ODLAM-010|11518.770|0.2909375|12604.629|15311.887|
-|ODLAM-012|8288.280|0.0769500|9585.018|11838.645|
-|ODLAM-014|9485.410|0.2586375|10660.039|13669.309|
+```
+                 BM         A        SS         P
+ODLAM-011 10762.960 0.2282375 11892.700 15329.160
+ODLAM-010 11518.770 0.2909375 12604.629 15311.887
+ODLAM-012  8288.280 0.0769500  9585.018 11838.645
+ODLAM-014  9485.410 0.2586375 10660.039 13669.309
+ODLAM-016  3486.100 0.0534375  5107.123  4968.012
+ODLAM-018  9706.515 0.2282375 11134.029 14390.308
+```
 
 ```{r}
 LSA$Stats
