--- a/README.Rmd
+++ b/README.Rmd
@@ -92,58 +92,71 @@ LSA <- BatWingArea(x=data, scale=F, method=c("BM","SS"))
 head(LSA$Area)
 ```
 
-||BM|SS|
-|:---|:---:|:---:|
-|ODLAM-011|10762.960|11892.700|
-|ODLAM-010|11518.770|12604.629|
-|ODLAM-012|8288.280|9585.018|
-|ODLAM-014|9485.410|10660.039|
+```
+                 BM        SS
+ODLAM-011 10762.960 11892.700
+ODLAM-010 11518.770 12604.629
+ODLAM-012  8288.280  9585.018
+ODLAM-014  9485.410 10660.039
+ODLAM-016  3486.100  5107.123
+ODLAM-018  9706.515 11134.029
+```
 
 ```{r}
 data <- read.csv("dynamics.csv",header=T)
 head(data)
 ```
 
-|ID|Mass|Env|Area|
-|:---|:---:|:---:|:---:|
-|ODLAM-011|15.5|330|0.011892700|
-|ODLAM-010|17.5|325|0.012604629|
-|ODLAM-012|9.0|295|0.009585018|
-|ODLAM-014| 16.5 |319| 0.010660039
+```
+         ID Mass Wingspan Area(inM^2)
+1 ODLAM-011 15.5      330 0.011892700
+2 ODLAM-010 17.5      325 0.012604629
+3 ODLAM-012  9.0      295 0.009585018
+4 ODLAM-014 16.5      319 0.010660039
+5 ODLAM-016  7.5      238 0.005107123
+6 ODLAM-018 15.5      331 0.011134029
+```
 
 ```{r}
 Dym <- BatWingDynamics(x=data, scale=T)
 head(Dym$Dynamics)
 ```
 
-||AR   |    WL    |   RWL  |    MPS|
-|:---|:---:|:---:|:---:|:---:|
-|ODLAM-011  |9.156878| 12.78557 | 51.27941 |3.715662|
-|ODLAM-010  |8.379858 |13.62000  |52.46032| 3.905866|
-|ODLAM-012 | 9.079273 | 9.21125 | 44.28307| 3.218072|
-|ODLAM-014|  9.546025 |15.18428 | 59.64392 |3.940761|
-
-```{r}
-head(Dym$Stats)
+```
+                 AR       WL      RWL      MPS
+ODLAM-011  9.156878 12.78557 51.27941 3.715662
+ODLAM-010  8.379858 13.62000 52.46032 3.905866
+ODLAM-012  9.079273  9.21125 44.28307 3.218072
+ODLAM-014  9.546025 15.18428 59.64392 3.940761
+ODLAM-016 11.091175 14.40635 73.59814 3.625027
+ODLAM-018  9.840194 13.65678 54.77358 3.746655
 ```
 
-|| Mass|         Env|         Area|        AR|       WL   |    RWL|       MPS|
-|:---|:---:|:---:|:---:|:---:|:---:|:---:|:---:|:---:|
-|mean |1.775000e-02| 0.337300000| 1.173300e-02| 10.333714 |15.48375|  61.14137| 3.8564452|
-|sd  | 8.813657e-03| 0.077113264| 5.577896e-03|  1.752498 | 5.16755 | 20.17576 |0.3835981|
-|var|  7.768056e-05| 0.005946456| 3.111293e-05|  3.071250| 26.70357 |407.06138 |0.1471475|
+```{r}
+Dym$Stats
+```
+
+```
+             Mass    Wingspan  Area(inM^2)        AR       WL       RWL       MPS
+mean 1.775000e-02 0.337300000 1.173300e-02 10.333714 15.48375  61.14137 3.8564452
+sd   8.813657e-03 0.077113264 5.577896e-03  1.752498  5.16755  20.17576 0.3835981
+var  7.768056e-05 0.005946456 3.111293e-05  3.071250 26.70357 407.06138 0.1471475
+```
 
 ```{r}
 Dym <- BatWingDynamics(x= data, scale=T, method = c("AR","RWL"))
 head(Dym$Dynamics)
 ```
 
-|| AR |      RWL|
-|:---|:---:|:---:|
-|ODLAM-011 | 9.156878 | 51.27941|
-|ODLAM-010 | 8.379858 | 52.46032|
-|ODLAM-012 | 9.079273 | 44.28307|
-|ODLAM-014 | 9.546025 | 59.64392|
+```
+                 AR      RWL
+ODLAM-011  9.156878 51.27941
+ODLAM-010  8.379858 52.46032
+ODLAM-012  9.079273 44.28307
+ODLAM-014  9.546025 59.64392
+ODLAM-016 11.091175 73.59814
+ODLAM-018  9.840194 54.77358
+```
 
 ```{r}
 data <- read.csv("wing.csv", header=T)
@@ -204,4 +217,14 @@ ODLAM-019 0.011797632  7.833436 15.798933 59.20748 4.216361
 ODLAM-020 0.031605478  8.261891 12.415569 36.30334 3.890423
 ODLAM-021 0.019050391  9.570879 10.556476 38.57160 3.446556
 ODLAm-022 0.006740612 12.736085 24.013400 94.32475 4.392654
+```
+
+```{r}
+All <- BatWingAll(x=data, scale=F)
+```
+
+```{r}
+Warning message:
+In BatWingAll(bat.m, scale = F) :
+  scaleArea is FALSE, remember, for the Dynamic formulas the LSA or Area must be in squared meters
 ```
