--- a/README.Rmd
+++ b/README.Rmd
@@ -64,6 +64,13 @@ The Dynamics formulas which this package use are:
   
   ![MPS](https://latex.codecogs.com/gif.latex?MPS%3D6.58%20*M%5E%7B0.422%7D*B%5E%7B-0.479%7D*S%5E%7B-0.148%7D)
   
+  ___
+ 
+   <sup>*Where:*
+
+   <sup> _**S** = LSA in squared meters_, _**B**= Wingspan in squared meters_ 
+   ,  _**9.81** = Gravity constant_, _**M** = Mass in Kilograms*_
+  ___ 
 ___
 
 ## Example
